--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "serve": "serve src/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
