--- a/package.json
+++ b/package.json
@@ -10,9 +10,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  }
+  "description": ""
 }
